# Polymarket

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  test_btc_filter.py  test_connection.py  test_retry_logic.py
backend/app/: btc_price_service.py  config.py  database.py  main.py  polymarket_client.py  trading_bot.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  analysis.py  bot.py  positions.py  trades.py  websocket.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Analysis.tsx  BotControls.tsx  MarketInfo.tsx  PnLDisplay.tsx  Positions.tsx  TradeHistory.tsx
frontend/src/hooks/: usePriceWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
